# InternVL

internvl_chat/: pyproject.toml
internvl_chat/shell/data/: trademark.json
internvl_chat/shell/internvl2.5/2nd_finetune/: internvl2_5_4b_dynamic_res_2nd_finetune_lora_custom.sh
